[gd_scene load_steps=14 format=3 uid="uid://bf6xr7fo5wyed"]

[ext_resource type="Script" uid="uid://dbmpr8hlk1pp8" path="res://Scripts/player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c4dhic5hp0trv" path="res://Sprites/player_weapon.png" id="2"]
[ext_resource type="PackedScene" uid="uid://cuycl0wd60o43" path="res://Scenes/Bullet.tscn" id="2_bhhdu"]
[ext_resource type="PackedScene" uid="uid://dvk8p8tj466dq" path="res://Scenes/Interfaces/HUD_Levelup.tscn" id="3_megsn"]
[ext_resource type="Texture2D" uid="uid://b1p6a24p37a4j" path="res://Sprites/lightmask01.png" id="3_nn08x"]
[ext_resource type="AudioStream" uid="uid://brqxfnso8nsh1" path="res://Sounds/gunshot.wav" id="4"]
[ext_resource type="AudioStream" uid="uid://ceroy3v5dhonj" path="res://Sounds/treasure.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://b57vr62oo6n1x" path="res://Sounds/hurt.wav" id="7"]

[sub_resource type="CanvasItemMaterial" id="1"]
light_mode = 1

[sub_resource type="CircleShape2D" id="2"]
radius = 195.46385

[sub_resource type="Animation" id="3"]
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nn08x"]
_data = {
&"walk": SubResource("3")
}

[sub_resource type="CircleShape2D" id="4"]
radius = 85.99999

[node name="Player" type="CharacterBody2D" groups=["player"]]
light_mask = 2
z_index = 3
scale = Vector2(0.2, 0.2)
script = ExtResource("1")
bullet_scn = ExtResource("2_bhhdu")
hud_levelup_scn = ExtResource("3_megsn")

[node name="sprite" type="Sprite2D" parent="."]
material = SubResource("1")
scale = Vector2(3, 3)
texture = ExtResource("2")
vframes = 2

[node name="shoot_rate" type="Timer" parent="."]
wait_time = 0.5

[node name="camera" type="Camera2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2(-6, 0)
scale = Vector2(0.7, 0.7)
shape = SubResource("2")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nn08x")
}

[node name="hitbox" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-6, 0)
shape = SubResource("4")

[node name="light" type="PointLight2D" parent="."]
light_mask = 2
energy = 0.35
shadow_enabled = true
texture = ExtResource("3_nn08x")
texture_scale = 2.5

[node name="audio" type="Node2D" parent="."]

[node name="gunshot" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("4")
volume_db = -35.0
attenuation = 0.297302

[node name="treasure" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("5")
volume_db = -35.0

[node name="hurt" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource("7")
volume_db = -30.0

[connection signal="timeout" from="shoot_rate" to="." method="_on_shoot_rate_timeout"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
